--- a/my_new_flask_app/templates/index.html
+++ b/my_new_flask_app/templates/index.html
@@ -62,10 +62,8 @@
             </div>
         </div>
     </div>
-    
 
     <div class="explore-hero__filter"></div>
-
     <div class="custom-box">
         <span id="showMe" style="color: rgb(101, 100, 98);">Show Me</span>
         <span class="collapsible-label" onclick="toggleCollapsible()">Everything</span>
@@ -73,6 +71,26 @@
             <!-- Content that you want to be collapsible goes here -->
         </div>
     </div>
+    <div class="custom-box-bg">
+    </div>
+    <div class="another-custom-box-bg">
+    </div>
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script>
         function toggleCollapsible() {
