--- a/my_new_flask_app/templates/index.html
+++ b/my_new_flask_app/templates/index.html
@@ -71,6 +71,11 @@
             <!-- Content that you want to be collapsible goes here -->
         </div>
     </div>
+    <div class="custom-box-responsive">
+        <div class="responsive-media">
+            <img src="{{ url_for('static', filename='images/summary pic.png') }}" alt="Image Description">
+        </div>
+    </div>
     <div class="custom-box-bg">
     </div>
     <div class="another-custom-box-bg">
