--- a/my_new_flask_app/static/styles.css
+++ b/my_new_flask_app/static/styles.css
@@ -237,14 +237,16 @@ body {
 
 
 /* codes for custom box*/
+
 .custom-box-responsive {
-  height: 973.2px;
+  height: 1060.2px;
   width: 1360px;
   background-color: #ffffff;
   position: absolute;
   top: 220px; /* Set the distance from the top */
   left: 50%;
   transform: translateX(-50%);
+  max-width: 100%; /* This will ensure the image doesn't exceed the width of its container */
   z-index: 1;
 }
 
@@ -257,18 +259,67 @@ body {
 .responsive-media img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 840px;
   transition: transform 0.3s;
 }
 
 .responsive-media img:hover {
   transform: scale(1.1);
 }
+.brush-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+.headline-container {
+  position: relative; /* Make the container a positioning context */
+}
+
+.headline-container::before {
+  content: "Transitioning from Summoner Names to Riot IDs"; /* Add your text here */
+  display: block;
+  font-size: 48px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+  font-weight: 2000;
+  text-decoration: solid;
+  text-align: left; /* Center the text */
+  margin-left: 45px;
+  position: absolute; /* Position the text absolutely */
+  top: 80px; /* Adjust the distance from the top of the container */
+  left: 0; /* Center the text horizontally */
+  width: 100%; /* Make sure it spans the full width of the container */
+  z-index: 1; /* Place it above the image */
+}
+
+.headline-container img {
+  max-width: 100%; /* This will ensure the image doesn't exceed the width of its container */
+  height: auto; /* This will maintain the aspect ratio of the image */
+}.headline-container::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5px;
+  border-radius: 5px;
+  background-image: url('/static/images/distressed-underline.svg');
+  background-size: 84% 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: 95px;
+  left: 50px;
+  opacity: 0; /* Set initial opacity to 0 */
+  transition: opacity 0.3s ease; /* Add a transition for smooth hover effect */
+}
+
+.headline-container:hover::after {
+  opacity: 1; /* Change opacity on hover */
+}
 
 
 /* codes for custom box bg*/
 .custom-box-bg {
-  height: 1444.54px;
+  height: 1300px;
   margin-top: 262.5px;
   background-color: #D8D9D6;
   position: relative;
@@ -280,4 +331,92 @@ body {
   background-color: #ffffff;
   position: relative;
   margin-top: 1,707.04px;
+}
+
+#custom-box-1 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 1500px; /* Set the distance from the top */
+  left: 25%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-2 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 1500px; /* Set the distance from the top */
+  left: 75%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-3 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 2200px; /* Set the distance from the top */
+  left: 25%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-4 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 2200px; /* Set the distance from the top */
+  left: 75%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-5 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 2900px; /* Set the distance from the top */
+  left: 25%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-6 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 2900px; /* Set the distance from the top */
+  left: 75%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-7 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 3500px; /* Set the distance from the top */
+  left: 25%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#custom-box-8 {
+  height: 650.188px;
+  width: 640px;
+  background-color: cyan;
+  position: absolute;
+  top: 3500px; /* Set the distance from the top */
+  left: 75%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
