--- a/my_new_flask_app/templates/index.html
+++ b/my_new_flask_app/templates/index.html
@@ -101,8 +101,10 @@
             <div class="eyebrow" style="background-color: red; color: white;">
                 <span>News</span>
             </div>
-            <h3 class="heading heading--4 summary__heading"><span>Planting Trees and Taking Drakes at Worlds 2023</span></h3>
-            <div class="summary__sell copy copy--muted">We’re putting the Worlds Event Pass to work for reforestation and working with AWS to expand safe water access during Worlds 2023.</div>
+            <h3 class="heading heading--4 summary__heading"><span>Transitioning from Summoner Names to Riot IDs</span></h3>
+            <div class="summary__sell copy copy--muted">This updates player name terminology to better reflect the <br>
+                current world of League of Legends, creates more fluidity <br>
+                between Riot games, and streamlines how names work from a <br>tech perspective.</div>
         </div>        
         <div class="brush-icon">
             <span class="icon brush-icon__bg" aria-hidden="true" style="width: 50px; height: 50px; line-height: 50px; position: absolute; top: 15px; left: 10px;">
