--- a/my_new_flask_app/static/styles.css
+++ b/my_new_flask_app/static/styles.css
@@ -228,9 +228,6 @@ body {
   content: "˄";
 }
 
-
-/* codes for custom box*/
-
 .custom-box-responsive {
   height: 1060.2px;
   width: 1360px;
@@ -329,7 +326,7 @@ body {
 #custom-box-1 {
   height: 650.188px;
   width: 640px;
-  background-color: e7e6e3;
+  background-color: #e7e6e3;
   position: absolute;
   top: 1290px; /* Set the distance from the top */
   left: 26.5%;
@@ -340,12 +337,12 @@ body {
   content: "";
   background-image: url('/static/images/distressed-underline.svg');
   background-repeat: no-repeat;
-  background-size: 86% 100%;
+  background-size: 88% 100%;
   height: 4px; /* Adjust height as needed */
   width: 100%; /* Adjust width as needed */
   position: absolute;
   bottom: 175px; /* Adjust position as needed */
-  left: 43px;
+  left: 41px;
   visibility: hidden; /* Hidden by default */
 }
 
@@ -357,20 +354,18 @@ body {
   content: "";
   background-image: url('/static/images/distressed-underline.svg');
   background-repeat: no-repeat;
-  background-size: 17.5% 100%;
+  background-size: 19.5% 100%;
   height: 4px; /* Adjust height as needed */
   width: 100%; /* Adjust width as needed */
   position: absolute;
   bottom: 140px; /* Adjust position as needed */
-  left: 43px;
+  left: 41px;
   visibility: hidden; /* Hidden by default */
 }
 
 #custom-box-1:hover::before{
   visibility: visible;
 }
-
-
 
 .date-container {
   writing-mode: vertical-rl;
@@ -416,12 +411,87 @@ body {
 #custom-box-2 {
   height: 650.188px;
   width: 640px;
-  background-color: cyan;
+  background-color: #e7e6e3;
   position: absolute;
   top: 1290px; /* Set the distance from the top */
   left: 73.5%;
   transform: translateX(-50%);
   z-index: 1;
+}
+
+
+#custom-box-2::after{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 76% 100%;
+  height: 4px; /* Adjust height as needed */
+  width: 100%; /* Adjust width as needed */
+  position: absolute;
+  bottom: 175px; /* Adjust position as needed */
+  left: 41px;
+  visibility: hidden; /* Hidden by default */
+}
+
+#custom-box-2:hover:after{
+  visibility: visible;
+}
+/* 
+#custom-box-2::before{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 19.5% 100%;
+  height: 4px;
+  width: 100%; 
+  position: absolute;
+  bottom: 140px; 
+  left: 41px;
+  visibility: hidden; 
+}
+
+#custom-box-2:hover::before{
+  visibility: visible;
+} */
+
+.date-container1 {
+  writing-mode: vertical-rl;
+  text-align: center;
+  position: absolute;
+  top: 0; /* Adjust the distance from the top */
+  left: 0; /* Adjust the distance from the left */
+  
+  transform: rotate(180deg);
+}.eyebrow1 {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  text-align: left;
+  padding: 5px;
+  margin-left: 40px; /* Margin for eyebrow */
+}
+
+.summary__heading1 {
+  margin-top: 15px;
+  margin-left: 40px; /* Margin for summary__heading */
+  font-size: 28px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+}
+.summary__sell1 {
+  margin-top: -20px;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: lighter;
+  color: #656462;
+  line-height: 1.8; /* Adjust the line height as needed */
+}
+
+.summary__content1 {
+  position: absolute; 
+  margin-top: 40px;/* Add some space between the media and text */
 }
 
 #custom-box-3 {
