--- a/my_new_flask_app/static/styles.css
+++ b/my_new_flask_app/static/styles.css
@@ -626,23 +626,6 @@ body {
 #custom-box-4:hover:after{
   visibility: visible;
 }
-/* 
-#custom-box-4::before{
-  content: "";
-  background-image: url('/static/images/distressed-underline.svg');
-  background-repeat: no-repeat;
-  background-size: 19.5% 100%;
-  height: 4px;
-  width: 100%; 
-  position: absolute;
-  bottom: 140px; 
-  left: 41px;
-  visibility: hidden; 
-}
-
-#custom-box-4:hover::before{
-  visibility: visible;
-} */
 
 .date-container3 {
   writing-mode: vertical-rl;
@@ -694,46 +677,357 @@ body {
 #custom-box-5 {
   height: 650.188px;
   width: 640px;
-  background-color: cyan;
   position: absolute;
-  top: 2900px; /* Set the distance from the top */
-  left: 25%;
+  top: 2700px; /* Set the distance from the top */
+  left: 26.5%;
   transform: translateX(-50%);
   z-index: 1;
 }
+
+#custom-box-5::after{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 83% 100%;
+  height: 4px; /* Adjust height as needed */
+  width: 100%; /* Adjust width as needed */
+  position: absolute;
+  bottom: 175px; /* Adjust position as needed */
+  left: 41px;
+  visibility: hidden; /* Hidden by default */
+}
+
+#custom-box-5:hover:after{
+  visibility: visible;
+}
+
+#custom-box-5::before{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 27% 100%;
+  height: 4px;
+  width: 100%; 
+  position: absolute;
+  bottom: 140px; 
+  left: 41px;
+  visibility: hidden; 
+}
+
+#custom-box-5:hover::before{
+  visibility: visible;
+}
+
+.date-container4 {
+  writing-mode: vertical-rl;
+  text-align: center;
+  position: absolute;
+  top: 0; /* Adjust the distance from the top */
+  left: 0; /* Adjust the distance from the left */
+  
+  transform: rotate(180deg);
+}.eyebrow4 {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  text-align: left;
+  padding: 5px;
+  margin-left: 40px; /* Margin for eyebrow */
+}
+
+.summary__heading4 {
+  margin-top: 15px;
+  margin-left: 40px; /* Margin for summary__heading */
+  font-size: 28px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+}
+.summary__sell4 {
+  margin-top: -20px;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: lighter;
+  color: #656462;
+  line-height: 1.8; /* Adjust the line height as needed */
+}
+
+.summary__content4 {
+  position: absolute; 
+  margin-top: 400px;/* Add some space between the media and text */
+}
+
+#custom-box-5:hover .icon.brush-icon__bg {
+  fill: red; /* Change fill color to red on hover */
+}
+
+#custom-box-5:hover .icon.brush-icon__type {
+  fill: white; /* Change fill color to white on hover */
+}
+
 
 #custom-box-6 {
   height: 650.188px;
   width: 640px;
-  background-color: cyan;
   position: absolute;
-  top: 2900px; /* Set the distance from the top */
-  left: 75%;
+  top: 2700px; /* Set the distance from the top */
+  left: 73.5%;
   transform: translateX(-50%);
   z-index: 1;
 }
 
+
+#custom-box-6::after{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 80% 100%;
+  height: 4px; /* Adjust height as needed */
+  width: 100%; /* Adjust width as needed */
+  position: absolute;
+  bottom: 170px; /* Adjust position as needed */
+  left: 41px;
+  visibility: hidden; /* Hidden by default */
+}
+
+#custom-box-6:hover:after{
+  visibility: visible;
+}
+#custom-box-6::before{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 73% 100%;
+  height: 4px;
+  width: 100%; 
+  position: absolute;
+  bottom: 135px; 
+  left: 41px;
+  visibility: hidden; 
+}
+
+#custom-box-6:hover::before{
+  visibility: visible;
+}
+
+.date-container5 {
+  writing-mode: vertical-rl;
+  text-align: center;
+  position: absolute;
+  top: 0; /* Adjust the distance from the top */
+  left: 0; /* Adjust the distance from the left */
+  
+  transform: rotate(180deg);
+}.eyebrow5{
+  display: inline-block;
+  background-color: red;
+  color: white;
+  text-align: left;
+  padding: 5px;
+  margin-left: 40px; /* Margin for eyebrow */
+}
+
+.summary__heading5 {
+  margin-top: 15px;
+  margin-left: 40px; /* Margin for summary__heading */
+  font-size: 28px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+}
+.summary__sell5 {
+  margin-top: -20px;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: lighter;
+  color: #656462;
+  line-height: 1.8; /* Adjust the line height as needed */
+}
+
+.summary__content5 {
+  position: absolute; 
+  margin-top: 40px;/* Add some space between the media and text */
+}
+
+#custom-box-6:hover .icon.brush-icon__bg {
+  fill: red; /* Change fill color to red on hover */
+}
+
+#custom-box-6:hover .icon.brush-icon__type {
+  fill: white; /* Change fill color to white on hover */
+}
+
+
+
 #custom-box-7 {
   height: 650.188px;
   width: 640px;
-  background-color: cyan;
   position: absolute;
   top: 3500px; /* Set the distance from the top */
-  left: 25%;
+  left: 26.5%;
   transform: translateX(-50%);
   z-index: 1;
+}
+
+#custom-box-7::after{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 81% 100%;
+  height: 4px; /* Adjust height as needed */
+  width: 100%; /* Adjust width as needed */
+  position: absolute;
+  bottom: 175px; /* Adjust position as needed */
+  left: 41px;
+  visibility: hidden; /* Hidden by default */
+}
+
+#custom-box-7:hover:after{
+  visibility: visible;
+}
+
+#custom-box-7::before{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 44% 100%;
+  height: 4px;
+  width: 100%; 
+  position: absolute;
+  bottom: 140px; 
+  left: 41px;
+  visibility: hidden; 
+}
+
+#custom-box-7:hover::before{
+  visibility: visible;
+}
+
+.date-container6 {
+  writing-mode: vertical-rl;
+  text-align: center;
+  position: absolute;
+  top: 0; /* Adjust the distance from the top */
+  left: 0; /* Adjust the distance from the left */
+  
+  transform: rotate(180deg);
+}.eyebrow6 {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  text-align: left;
+  padding: 5px;
+  margin-left: 40px; /* Margin for eyebrow */
+}
+
+.summary__heading6 {
+  margin-top: 15px;
+  margin-left: 40px; /* Margin for summary__heading */
+  font-size: 28px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+}
+.summary__sell6 {
+  margin-top: -20px;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: lighter;
+  color: #656462;
+  line-height: 1.8; /* Adjust the line height as needed */
+}
+
+.summary__content6 {
+  position: absolute; 
+  margin-top: 400px;/* Add some space between the media and text */
+}
+
+#custom-box-7:hover .icon.brush-icon__bg {
+  fill: red; /* Change fill color to red on hover */
+}
+
+#custom-box-7:hover .icon.brush-icon__type {
+  fill: white; /* Change fill color to white on hover */
 }
 
 #custom-box-8 {
   height: 650.188px;
   width: 640px;
-  background-color: cyan;
   position: absolute;
   top: 3500px; /* Set the distance from the top */
-  left: 75%;
+  left: 73.5%;
   transform: translateX(-50%);
   z-index: 1;
 }
+
+#custom-box-8::after{
+  content: "";
+  background-image: url('/static/images/distressed-underline.svg');
+  background-repeat: no-repeat;
+  background-size: 66% 100%;
+  height: 4px; /* Adjust height as needed */
+  width: 100%; /* Adjust width as needed */
+  position: absolute;
+  bottom: 175px; /* Adjust position as needed */
+  left: 41px;
+  visibility: hidden; /* Hidden by default */
+}
+
+#custom-box-8:hover:after{
+  visibility: visible;
+}
+
+.date-container7 {
+  writing-mode: vertical-rl;
+  text-align: center;
+  position: absolute;
+  top: 0; /* Adjust the distance from the top */
+  left: 0; /* Adjust the distance from the left */
+  
+  transform: rotate(180deg);
+}.eyebrow7 {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  text-align: left;
+  padding: 5px;
+  margin-left: 40px; /* Margin for eyebrow */
+}
+
+.summary__heading7 {
+  margin-top: 15px;
+  margin-left: 40px; /* Margin for summary__heading */
+  font-size: 28px; /* Adjust the font size as needed */
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: bolder;
+}
+.summary__sell7 {
+  margin-top: -20px;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+  font-family: 'Mark Pro', Arial, sans-serif;
+  font-weight: lighter;
+  color: #656462;
+  line-height: 1.8; /* Adjust the line height as needed */
+}
+
+.summary__content7 {
+  position: absolute; 
+  margin-top: 40px;/* Add some space between the media and text */
+}
+
+#custom-box-8:hover .icon.brush-icon__bg {
+  fill: red; /* Change fill color to red on hover */
+}
+
+#custom-box-8:hover .icon.brush-icon__type {
+  fill: white; /* Change fill color to white on hover */
+}
+
 
 .responsive-media-custom-boxes {
   position: relative; 
