--- a/my_new_flask_app/templates/who-are-we.html
+++ b/my_new_flask_app/templates/who-are-we.html
@@ -84,15 +84,11 @@
       </div>
     </div>
     <main>
-      <div class="eyebrow eyebrow--xl superhero-feature__eyebrow">
-        <span>Who Are We?</span>
-        <h1
-          class="heading heading--2 heading--light superhero-feature__heading"
-        >
-          We Are Rioters
-        </h1>
+      <div class="text-center">
+        <span>WHO ARE WE?</span>
+        <h1>We Are Rioters</h1>
       </div>
-      <div>
+      <div class="text-center">
         <p>We aspire to be the most player-focused game company in the world</p>
         <div>
           <p>
@@ -277,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="footer__inner">
+      <div class="text-center">
         <div class="content-center">
           <div class="footer__row">
             <div class="footer__col">
