--- a/my_new_flask_app/templates/index.html
+++ b/my_new_flask_app/templates/index.html
@@ -68,7 +68,6 @@
         <span id="showMe" style="color: rgb(101, 100, 98);">Show Me</span>
         <span class="collapsible-label" onclick="toggleCollapsible()">Everything</span>
         <div class="collapsible-content" id="collapsibleContent">
-            <!-- Content that you want to be collapsible goes here -->
         </div>
     </div>
     <div class="custom-box-responsive">
@@ -338,35 +337,71 @@
     </div>
     <div class="another-custom-box-bg">
     </div>
-    
-    
-    <!-- <div class="summary__type-icon">
-        <div class="brush-icon">
-          <span class="icon brush-icon__bg" aria-hidden="true" style="width: 50px; height: 50px; line-height: 50px; position: absolute; top: 15px; left: 10px;">
-            <svg viewBox="0 0 50 50" fill="#fffff">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M30.7.3c-.3.1-.4 0-.4-.3 1 .5 1.2.2 2.1.3.3.3.3.5-.1.8.6.4.9-1.3 1.4-.4-.2.1-.3.2-.5.3.1.2 4.3.2 4.9.5 1 .5 4.5 2.7 4.5 3.6-.1.1-.3.2-.4.3 0 0 1.6 2.1 1.7 2.3.7 1.2 1.1 1.9 1.6 2.8 1 1.9 2.2 4.2 1.8 6.2 1.1.3.9.9.3 1.5 0 .2 1.2 1.9 1.4 2.7.3 1 .4 2.4.6 3.7.1 1.2.8 4.9.2 6-.2.5-2.2 1.2-2.2 1.3-.3.4-.1.8-.5 1.2-.8.8-1.2 2-1.8 2.8-1.2 1.6-2.4 3.1-3.9 4.5-2.8 2.6-5.3 5-9.1 6.6-3.1 1.3-6.9 3.5-10.5 2.4-.2.1-.4.3-.4.6-.2.1-1-.6-1.3-.6.2.3.1.5-.2.6-1.5-1.4-6.8-.5-7.4-3.1-1.6.4-1.2-.4-2.2-1-.4-.2-2.4-1.4-3.2-1.9-1-.6-2.2-1.6-2.9-2.4-1.3-1.5-.5-.5-.1-2.3-.2-.6-1.5 1.3-1.4 1.2-.3.1-1.4-1.3-1.4-1.5.8.1.5.9 1 .9.7.1-.5-1.4-.3-1.7.2.3.5.3.7 0 .4-.7-1.1-.7-1.3-1 0-.2.2-.4.4-.4-.1-.6-1.3.3-1.2-.5 1.4-.6-.5-1-.3-1.7.5.4.8.3.9-.3-.6-.3-1.1-1-1.2-1.4 0-.3 2.2 2.5 2.6 2.5.3 0-1.2-1.9-1.3-2.1.7-.1 1 .9 1.4.6 0 0-1-1.7-.9-1.4.2-.4.4.5.8-.4-.4-.3-.3.8-.6-.3.1 0 .3-.1.4-.2-.2-.5-1.2.1-1.6-.1.2-.3.2-.6-.2-.9 0 0 1.3 1.1 1.3.3-.1-.2-.3-.3-.5-.3.1-1 1.7 1.1 1.7 1.1.6-.1-.8-2.2-.7-2.3.2-.1.5-.1.7 0 .7-.8-1.4-.1-.6-.8.9-.2 0 .3-.2-.6.5-.6.6.1.7-.9-.3-.1-.6-.2-.8-.5.1-.2.3-.3.6-.2-.7-4.7-.8-9 1.4-13.1C5.4 10.8 7 9.5 9.3 8.2c.9-.5 1.9-1.2 2.8-1.7.8-.5 2.6-1.1 3.1-1.6-.2-.3-.5-.3-.8-.1.1-.8 2.3-1.2 2.6-1.1.3-.1 1.6-1.5 2.1-1.8.7-.4 1.3-.6 2.4-.8.9-.2 4.1-1 2.9-.3.9.3.8-.9 1.5-.1.4-.1 4.8-1.1 4.8-.4zm4.4 1.2c.1.2.3 0 .3-.2-.2.1-.3 0-.3.2zm1 .1c.1.1.4 0 .3-.2-.1-.1-.3 0-.3.2zM18.5 2.7c.2 0 .3-.1.3-.3-.2 0-.3.1-.3.3zm22.6 1.9c0 .2.5.3.6 0-.2-.2-.7-.3-.6 0zm2.5 3.8c.2.1.3-.1.3-.3-.2-.1-.4.1-.3.3zM8.5 25.8c.1 0 .3 0 .3-.2-.1-.1-.4 0-.3.2zm.3.6c.1.5.7-.1.6-.2-.2.1-.4.2-.6.2zm-1 .3s.1 0 0 0c.8.2.3-.7 0 0zm1 .2c-.2 0-1.7.1-1.7.5.2.4 1 0 .5.6.3.2.6.2.9 0 0-.3-.5 0-.5-.3-.1 0 1.8-.7.8-.8zm.7.9l-.9.3c.4.4 1.1 0 .9-.3zm.6.2c.1 0 .1 0 .2-.1-.1 0-.2 0-.2.1zm-3 .1c.1 0 .4.2.5-.1-.1-.1-.6-.2-.5.1zm2.5.5c-.4-.1-.5.5-.7.8.4-.1 1.4-.3 1.9-.7-.4-.3-.8-.3-1.2-.1zm-1.8.1c-.1 0-1.2-.1-1.2.3.1.1 2.1.7 2.2.4-.1-.9.2-.3.2-.7-.4-.1-.8-.1-1.2 0zm2 .6c-.1.7-1.1.6-1.2.9.2.2 1.8.1 1.8 0-.1.1.3-1.2.3-1.2-.2.2-.5.2-.9.3zm1.3.3c.1-.2 0-.3-.2-.4 0 .3-.1.4.2.4zm.3.5c-.2-.2-.4-.2-.6.1 0 0 1.1.8 1.2.8.1 0 .2-.8.2-.9h-.8zm-8.8 2.8c-.1.3.5.5.5.2-.1-.3-.4-.5-.5-.2zm.7 1c.1 0 .2-.1.2-.2-.2-.2-.6.2-.2.2zm-.8.4c-.1.4.8.3.7-.1-.2 0-.5.1-.7.1zm.5.7c0 .5.8.6.8 0H3zm-1.9.4c.1.1 1.2 1.5 1.1.4 0-.1-1.1-1.1-1.1-.4zm1.5.6c.6.2.8.1.6-.5-.2.2-.4.3-.6.5zm6.9.6c.9.1 1.1-.1.8-.8-.6 0-.9.2-.8.8zm-.5-.3c0-.3-.6-.3-.7 0 .2.2.7.3.7 0zm-7.1.6l.8-.3c-.4-.2-.7-.1-.8.3zm7.7-.1c-.3-.2-.6-.1-.8.2.3.3.9.3.8-.2zm-.3.9c.1.1.8.6.9.5 0 0-.4-1.9-.9-.5zm.1.8c.1 0 .2-.2.2-.4-.3-.1-.5.3-.2.4zm-6.7 0c.4.6.6.5.6-.3-.1.1-.3.2-.6.3zm9.1 1.1c.5.3.5-.7.5-.8-.5.1-.6.3-.5.8zM8.4 39c-.4-.2-.3.5.4.1.8-.4-.6 0-.4-.1zm11.1.3c-.5.2-.4.4.1.5.4-.2.5-.5.3-.9-.2 0-.4.1-.4.4zm-1.7.3c-.4.5.7.3.7 0-.3-.1-.5-.1-.7 0zm-.7.2c.2 0 .2-.1.3-.2-.2-.2-.5 0-.3.2zm-8.8 0c.1 0 1.6.5 1.3-.2-.3 0-1.3-.1-1.3.2zm4.1.1c-.4.4-.4.5.2.3 0-.3-.4-1-.2-.3zm-6.9.2c-.8.1-1.9-.1-2 1.1.3 0 1.3-1.7 1.7-.6-.2 0-.4.2-.5.4.6.7.4-.1.8.6.6-.2.1-1.2 0-1.5zm5.5.2c-.6-.1.5.7.7 0-.3-.2-.5-.2-.7 0zm-1.1.2c.2 0 .2-.1.4-.1 0-.4-.4-.2-.4.1zm-.4 0c.1-.1.3 0 .4 0 0-.3-.6-.3-.4 0zm2.3.5c.1 0 .1-.1 0-.2.1.2 0 .2 0 .2zm-2 .1c-.3.7.4.9.9.8 0-.1-.3-1-.3-.9-.1-.1-.3-.1-.6.1zm1.4-.1c-.3.4-.2 1.7-.6 2.3 0 0 2.9-2.6 3-2-.2 0-2.7.1-2.4-.3zm3.4 1c-.4-.1-.8.1-1.1.4.6.9.9-.8.7.6.1 0 .9.1 1.1.2 0-1.1 0-.5-.7-1.2zm1.9.3c.2-.2 0-.4-.3-.3 0 .2.1.3.3.3zm-5.8.1c0 .2.3.1.3-.1-.1 0-.3 0-.3.1zm4.8.4c.4.4.6.3.7-.2-.2 0-.5 0-.7.2zm-1.8.1c.1.2.4-.1.1-.2 0 .1-.1 0-.1.2zm-1.8.1c-.4.7.7 1.3.9.6-.4-.4-.3-.4-.9-.6zm5.1.2c0 .4.8.4.9.2 0-.2-.7-.3-.9-.2zm-2.9.4c.2.1.5.1.5-.2-.2-.1-.5-.1-.5.2zm-1.2.1c.2 0 .5.1.5-.2-.1-.1-.5-.1-.5.2zm-1.6.2c0 .2-.2.9.1.9.5-.6.3-.3.5-1.1-.2.1-.4.2-.6.2zm2.7.2c.1-.1.1-.2 0-.3-.1.1-.2.2 0 .3zm2.8 0c.1.6.5.4.7.9-.1.1-.7.5-.7.6 1.9.6.1-2.4 0-1.5zm-2 .2c.1 0 .2-.1.3-.1 0-.3-.3-.1-.3.1zm-1.7-.1c.3-.4-.1 1.8-.1 1.6 1 .3 1.4-.1 1.2-1-.9.2-.5 0-.5-.7-.2.1-.4.1-.6.1zm-.7.1c-.1.3.5.4.5.1-.1-.3-.4-.3-.5-.1zm2.6.7c.3.1.6-.1.7-.3-.2-.2-.6 0-.7.3zm-2.7.3c.3.2.8.1.8-.3-.2.1-.9-.2-.8.3zm3.5.5c.1 0 .2-.1.2-.2-.1-.1-.3.1-.2.2zm-1.3.8c.2 0 .3-.1.3-.3-.2-.3-.6 0-.3.3zm1.8-.2c.1 0 .2.1.3.1.1-.1-.2-.2-.3-.1z"></path>
-            </svg>
-          </span>
-          <span class="icon brush-icon__type" aria-hidden="true" style="width: 18px; height: 15px; line-height: 14px; position: absolute; top: 31px; left: 26px;">
-            <svg viewBox="0 0 18 18" fill="#ff0000">
-              <path d="M5 0v2h9.6L.5 16.1l1.4 1.4L16 3.4V13h2V0z"></path>
-            </svg>
-          </span>
+    <footer>
+        <div class="footer-container">
+            <div class="logo">
+                <span class="icon-riot" style="width:38px;height:40px;line-height:40px"><span class="is-vhidden"></span><svg width="38" height="40" dataname="Layer 1" viewBox="0 0 185.47 163.51"><path class="cls-1" d="M98.77 0L0 45.74l24.61 93.66 18.73-2.3-5.15-58.89 6.15-2.74 10.62 60.2 32.01-3.93-5.69-65 6.09-2.71 11.68 66.23 32.38-3.98-6.23-71.25 6.16-2.74 12.77 72.43 32.01-3.93V19.38L98.77 0zm2.32 142.05l1.63 9.22 73.42 12.24v-30.68l-75.01 9.21-.04.01zM176.17.71V0h3.64v.71zm1.41 3.94V.4h.81v4.25zm3 0V0h.8v4.65zm2.21 .83L183 3.41 184.44 0h.84l-2.06 4.65zm1.83 0V0h.81v4.65z"></path></svg></span>
+            </div>
+            <ul class="left">
+                <li>PRESS</li>
+                <li>SECURITY</li>
+                <li>LEGAL</li>
+                <li>LEADERSHIP</li>
+                <li>CANDIDATE PRIVACY</li>
+                <li>TERMS OF SERVICE</li>
+                <li>PRIVACY NOTICE</li>
+                <li>PLAYER SUPPORT</li>
+                <li>E-VERIFY</li>
+                <li>ACCESSIBILITY</li>
+            </ul>
+            <div class="right">
+                <div class="footer__social">
+                    <a target="_blank" rel="noopener" href="https://www.facebook.com/RiotGames/">
+                      <span class="icon" style="width:9px;height:16px;line-height:16px">
+                        <span class="is-vhidden">Follow us on Facebook</span>
+                        <svg viewBox="0 0 9 16">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M5.7 16V8.7h2.4l.4-2.8H5.7V4c0-.8.2-1.4 1.4-1.4h1.5V.1C8.4.1 7.5 0 6.5 0 4.3 0 2.8 1.3 2.8 3.8v2.1H.3v2.8h2.5V16h2.9z"></path>
+                        </svg>
+                      </span>
+                    </a>
+                    <a target="_blank" rel="noopener" href="https://twitter.com/riotgames">
+                      <span class="icon" style="width:19px;height:14px;line-height:14px">
+                        <span class="is-vhidden">Follow us on Twitter</span>
+                        <svg viewBox="0 0 19 14">
+                          <path d="M19 1.5c-.7.3-1.5.5-2.3.6.8-.4 1.4-1.1 1.7-2-.8.4-1.6.7-2.5.9-.7-.6-1.7-1-2.8-1-2.2 0-3.9 1.6-3.9 3.6 0 .3 0 .5.1.8C6 4.3 3.1 2.9 1.1.9.8 1.4.6 2 .6 2.6c0 1.2.7 2.3 1.8 2.9-.6 0-1.3-.2-1.8-.4C.6 6.8 2 8.2 3.8 8.5c-.3.1-.7.1-1 .1h-.7c.5 1.4 2 2.4 3.7 2.4-1.3 1-3 1.6-4.9 1.6H0c1.8 1 3.8 1.5 6.1 1.5 7.2-.1 11.1-5.5 11-10.2v-.5c.7-.5 1.4-1.1 1.9-1.9z"></path>
+                        </svg>
+                      </span>
+                    </a>
+                    <a target="_blank" rel="noopener" href="https://www.linkedin.com/company/riot-games">
+                      <span class="icon" style="width:16px;height:16px;line-height:16px">
+                        <span class="is-vhidden">Share this on LinkedIn</span>
+                        <svg viewBox="0 0 16 16">
+                          <path d="M.3 5.3h3.3V16H.3z"></path>
+                          <ellipse cx="1.9" cy="1.9" rx="1.9" ry="1.9"></ellipse>
+                          <path d="M16 16h-3.3v-5.2c0-1.2 0-2.8-1.7-2.8s-2 1.4-2 2.7V16H5.7V5.3h3.2v1.5C9.3 5.9 10.4 5 12 5c3.4 0 4 2.2 4 5.1V16z"></path>
+                        </svg>
+                      </span>
+                    </a>
+                    <a target="_blank" rel="noopener" href="https://www.youtube.com/riotgames">
+                      <span class="icon" style="width:19px;height:13px;line-height:13px">
+                        <span class="is-vhidden">Watch on YouTube</span>
+                        <svg viewBox="0 0 19 13">
+                          <path d="M18.6 2.8s-.2-1.3-.7-1.8C17.2.3 16.4.3 16 .2 13.4 0 9.5 0 9.5 0S5.6 0 3 .2c-.4 0-1.1 0-1.9.8-.5.5-.7 1.8-.7 1.8s-.2 1.5-.2 3v1.4c0 1.5.2 3 .2 3s.2 1.3.7 1.8c.7.7 1.6.7 2 .8 1.6.2 6.4.2 6.4.2s3.9 0 6.5-.2c.4 0 1.1 0 1.9-.8.6-.6.7-1.8.7-1.8s.2-1.5.2-3V5.8l-.2-3zm-11 6.1V3.7l5 2.6-5 2.6z"></path>
+                        </svg>
+                      </span>
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
- -->
-
-
-
-
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <script>
-        function toggleCollapsible() {
-            var content = document.getElementById("collapsibleContent");
-            content.classList.toggle("active");
-        }
-    </script>
-    
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+        <div class="separator"></div>
+        <div class="footer-bottom">
+            <div class="left-text">
+                Cookie Preferences | ©2023 Riot Games, Inc. All Rights Reserved.
+            </div>
+            <div class="right-text">
+                TO THE SURFACE ▲
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
