--- a/my_new_flask_app/templates/index.html
+++ b/my_new_flask_app/templates/index.html
@@ -337,6 +337,11 @@
     </div>
     <div class="another-custom-box-bg">
     </div>
+    <div class="load-more text-center">
+        <a href="/api/load-more/maxi-grid" class="button button--muted js-load-more-btn">
+          <span>Load More</span>
+        </a>
+      </div>
     <footer>
         <div class="footer-container">
             <div class="logo">
@@ -360,7 +365,7 @@
                       <span class="icon" style="width:9px;height:16px;line-height:16px">
                         <span class="is-vhidden">Follow us on Facebook</span>
                         <svg viewBox="0 0 9 16">
-                          <path fill-rule="evenodd" clip-rule="evenodd" d="M5.7 16V8.7h2.4l.4-2.8H5.7V4c0-.8.2-1.4 1.4-1.4h1.5V.1C8.4.1 7.5 0 6.5 0 4.3 0 2.8 1.3 2.8 3.8v2.1H.3v2.8h2.5V16h2.9z"></path>
+                          <path d="M5.7 16V8.7h2.4l.4-2.8H5.7V4c0-.8.2-1.4 1.4-1.4h1.5V.1C8.4.1 7.5 0 6.5 0 4.3 0 2.8 1.3 2.8 3.8v2.1H.3v2.8h2.5V16h2.9z"></path>
                         </svg>
                       </span>
                     </a>
@@ -403,5 +408,6 @@
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
