--- a/my_new_flask_app/static/who-we-are.css
+++ b/my_new_flask_app/static/who-we-are.css
@@ -156,4 +156,33 @@ main {
 
 .text-center {
   text-align: center;
+  width: 100%;
+}
+
+.video-background {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 87%;
+  z-index: 0;
+}
+
+.center-content {
+  position: absolute;
+  top: 50%; /* Place it 50% from the top */
+  left: 0;
+  width: 100%;
+  transform: translateY(-50%); /* Center it vertically */
+}
+
+.red-box {
+  background-color: #cc3030;
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+h1 {
+  text-align: center;
 }
