--- a/my_new_flask_app/static/who-we-are.css
+++ b/my_new_flask_app/static/who-we-are.css
@@ -1,10 +1,28 @@
+@font-face {
+  font-family: "Mark Pro";
+  src: url("/static/fonts/Mark Pro.woff2") format("woff2"),
+    url("/static/fonts/Mark Pro.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Mark Pro", Arial, sans-serif;
   margin: 0;
+  font-size: 2vw; /* Adjust font size based on viewport width */
+
+  @media (max-width: 768px) {
+    font-size: 3vw; /* Adjust font size for smaller screens */
+  }
+
+  @media (max-width: 480px) {
+    font-size: 4vw; /* Adjust font size for even smaller screens */
+  }
 }
 
 main {
   margin-top: 80px; /* Adjust the value to match the height of your top-bar */
+  font-family: "Mark Pro", Arial, sans-serif;
 }
 
 .top-bar {
@@ -165,16 +183,16 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 87%;
+  height: 90%;
   z-index: 0;
 }
 
 .center-content {
   position: absolute;
-  top: 50%; /* Place it 50% from the top */
+  top: 50%;
   left: 0;
   width: 100%;
-  transform: translateY(-50%); /* Center it vertically */
+  transform: translateY(-50%);
 }
 
 .red-box {
@@ -185,4 +203,40 @@ main {
 
 h1 {
   text-align: center;
+}
+
+.background-container {
+  position: relative;
+  background-size: cover;
+  min-height: 50vh;
+}
+
+.text-container {
+  position: absolute;
+  top: 3%;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.centered-left-align-content {
+  text-align: left;
+  margin: 0 auto;
+  max-width: 50%;
+}
+
+.bold-black-link {
+  font-weight: bold;
+  color: black;
+}
+
+.heading.heading--3 {
+  background-image: url("/static/images/explore-hero-bg--large--lighten.jpg");
+  background-size: cover; /* Adjust to your needs */
+  background-repeat: no-repeat;
+  background-position: center;
+  color: rgb(0, 0, 0); /* Set the text color */
+  height: 200px;
+  display: flex;
+  align-items: center;
 }
