--- a/my_new_flask_app/static/who-we-are.css
+++ b/my_new_flask_app/static/who-we-are.css
@@ -9,7 +9,6 @@
 body {
   font-family: "Mark Pro", Arial, sans-serif;
   margin: 0;
-  font-size: 2vw; /* Adjust font size based on viewport width */
 
   @media (max-width: 768px) {
     font-size: 3vw; /* Adjust font size for smaller screens */
@@ -206,9 +205,13 @@ h1 {
 }
 
 .background-container {
+  display: flex;
   position: relative;
   background-size: cover;
-  min-height: 50vh;
+  min-height: 80vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: -100px;
 }
 
 .text-container {
@@ -239,4 +242,43 @@ h1 {
   height: 200px;
   display: flex;
   align-items: center;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.image-container {
+  position: relative;
+  text-align: center;
+  background-image: url("/static/images/valorant-columns.jpg");
+  background-size: cover; /* Cover the entire width */
+  background-position: center; /* Center the image horizontally */
+  background-repeat: no-repeat;
+  height: 100vh; /* Adjust the height as needed */
+  width: 100%; /* Cover the entire width */
+}
+
+.columns {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center; /* Vertically center the text */
+  height: 80%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.column {
+  flex: 1; /* Let the text take up all available space within the column */
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-weight: 900;
+  font-size: x-large;
+  color: rgb(255, 255, 255);
 }
