--- a/my_new_flask_app/templates/who-are-we.html
+++ b/my_new_flask_app/templates/who-are-we.html
@@ -109,10 +109,7 @@
           </div>
         </div>
       </div>
-      <div
-        class="background-container"
-        style="background-image: url('{{ url_for('static', filename='images/we aspire part.png') }}'); background-size: cover; min-height: 100vh"
-      >
+      <div class="background-container">
         <div class="text-container text-center">
           <p style="font-weight: bold; font-size: 40px">
             We aspire to be the most player-focused<br />
@@ -230,10 +227,10 @@
         <div class="image-container">
           <div class="columns">
             <div class="column">
-              <span
-                >PLAYER EXPERIENCE<br />
-                FIRST</span
-              >
+              <span>
+                PLAYER EXPERIENCE<br />
+                FIRST
+              </span>
             </div>
             <div class="column">
               <span>DARE TO DREAM</span>
@@ -249,68 +246,93 @@
             </div>
           </div>
         </div>
-        <div class="grid__item tablet-one-half">
+        <div class="background-container">
           <div
-            class="text-with-image__text content-center content-center--4-12"
+            class="flex-container"
+            style="justify-content: space-between; margin-top: 100px"
           >
-            <h3 class="heading heading--4">Diversity &amp; Inclusion</h3>
-            <div class="copy prose">
-              <p
-                dir="ltr"
-                style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt"
+            <div class="image" style="margin-left: 0">
+              <img
+                src="{{ url_for('static', filename='images/champion1.jpg') }}"
+                alt="League Champion1"
+                width="600"
+                height="600"
+              />
+            </div>
+
+            <div class="text-content" style="margin-right: 100px">
+              <h3>Diversity & Inclusion</h3>
+              <div class="copy prose">
+                <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0">
+                  We’re focused on making Riot a great home for people who love
+                  making games and setting a high bar for diversity and
+                  inclusion.
+                </p>
+              </div>
+              <a
+                href="https://www.riotgames.com/en/diversity-and-inclusion"
+                class="button"
               >
-                We’re focused on making Riot a great home for people who love
-                making games and setting a high bar for diversity and inclusion.
-              </p>
+                <span>Learn More</span>
+              </a>
             </div>
-            <a
-              href="https://www.riotgames.com/en/diversity-and-inclusion"
-              class="button"
-              ><span>Learn More</span></a
-            >
           </div>
-        </div>
-        <div class="grid__item tablet-one-half">
+
           <div
-            class="text-with-image__text content-center content-center--4-12"
+            class="flex-container"
+            style="justify-content: flex-end; margin-top: 100px"
           >
-            <h3 class="heading heading--4">Social Impact</h3>
-            <div class="copy prose">
-              <p>
-                We believe that anyone with passion, vision, and perseverance
-                can make a positive impact. As part of that ethos, we also
-                believe that there are ways where we, as a company, can provide
-                long-term value and positive impact to the players, partners,
-                Rioters, and communities we serve.
-              </p>
-              <p>
-                Through corporate social responsibility, we hope to apply our
-                unique resources and strengths to create a positive and lasting
-                impact for all of our stakeholders, players, Rioters, our
-                communities, and our planet.
-              </p>
+            <div class="text-content">
+              <div class="image" style="margin-left: 1000px">
+                <img
+                  src="{{ url_for('static', filename='images/champion2.jpg') }}"
+                  alt="League Champion1"
+                  width="300"
+                  height="300"
+                />
+              </div>
             </div>
-            <a
-              href="https://www.riotgames.com/en/who-we-are/social-impact"
-              class="button"
-              ><span>Learn More</span></a
-            >
+            <div style="margin-right: 20px">
+              <h3>Social Impact</h3>
+              <div class="copy prose">
+                <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0">
+                  We believe that anyone with passion, vision, and perseverance
+                  can make a positive impact. As part of that ethos, we alsow
+                  believe that there are ways where we, as a company, can
+                  provide long-term value and positive impact to the players,
+                  partners, Rioters, and communities we serve.
+                </p>
+                <p>
+                  Through corporate social responsibility, we hope to apply our
+                  unique resources and strengths to create a positive and
+                  lasting impact for all of our stakeholders, players, Rioters,
+                  our communities, and our planet.
+                </p>
+              </div>
+              <a
+                href="https://www.riotgames.com/en/who-we-are/social-impact"
+                class="button"
+                ><span>Learn More</span></a
+              >
+            </div>
           </div>
         </div>
       </div>
+      <div class="heading heading--4" style="text-align: center">
+        <h2>We are global</h2>
+      </div>
       <div
-        class="widget__wrapper widget__wrapper--officerandomiser js-widget js-widget--desktop visible--desktop js-widget--tablet visible--tablet js-widget--mobile visible--mobile"
-        data-widget-id="daab347976b98c1502eee31abdeed148"
+        class="copy copy--large copy--light prose"
+        style="text-align: center"
       >
-        <h2 class="heading heading--3 heading--light">We are global</h2>
-        <div class="copy copy--large copy--light prose">
-          <p>
-            Riot Games’ HQ is located in sunny Los Angeles, but we have many
-            more offices around the globe. We’re looking for passionate gamers
-            who are also leaders in their field to help us deliver value to
-            players—no matter where they play.
-          </p>
-        </div>
+        <p>
+          Riot Games’ HQ is located in sunny Los Angeles, but we have many more
+          offices around the globe. We’re looking for passionate gamers who are
+          also leaders in their field to help us deliver value to players—no
+          matter where they play.
+        </p>
+      </div>
+      <div style="text-align: center">
         <a
           href="https://www.riotgames.com/en/work-with-us/offices"
           class="button button--inverse"
